Got the logic working. Fixed some issues in the UI, need some quality of life or whatever

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Wordle</string>
     <string name="guessInputHint">Guess the word bozo</string>
     <string name="titleGame">The Wordle</string>
-    <string name="restartText">Restart</string>
+    <string name="guessSubmissionBtnText">Guess!</string>
+    <string name="RestartSubmissionBtnText">Restart</string>
 </resources>
